@@ -2,48 +2,55 @@ package org.improving;
 
 import javafx.scene.control.ColorPicker;
 
-import java.util.ArrayList;
-import java.util.List;
+import java.util.Collections;
+import java.util.LinkedList;
+import java.util.LinkedList;
 import java.util.Random;
 
 public class Deck {
 
-    private List<Card> drawPile = new ArrayList<>();
-    private List<Card> discardPile = new ArrayList<>();
+    private LinkedList<Card> drawPile = new LinkedList<>();
+    private LinkedList<Card> discardPile = new LinkedList<>();
 
     public Deck(){
         for (var color : Color.values()){
             for (var faces : Faces.values()){
-                if (color.toString().equalsIgnoreCase("wild")) {
-                    if (faces.getValue() == 50) {
-                        drawPile.add(new Card(color, faces));
-                        drawPile.add(new Card(color, faces));
-                        drawPile.add(new Card(color, faces));
-                        drawPile.add(new Card(color, faces));
-                    }
-                }else if (!faces.toString().equalsIgnoreCase("Wild") &&
-                        !faces.toString().equalsIgnoreCase("WildDrawFour")){
+                if (faces.getValue() == 50) {
+                    drawPile.add(new Card(color, faces));
+                } else {
                     drawPile.add(new Card(color, faces));
                     drawPile.add(new Card(color, faces));
                 }
             }
         }
+        Collections.shuffle(drawPile);
     }
     public Card draw(){
-    var random = new Random().nextInt(drawPile.size());
-    var card = drawPile.get(random == 0 ? 0 : random-1);
-    drawPile.remove(card);
-    return card;
+        // TODO: replenish deck from discard pile.
+        if(drawPile.isEmpty()){
+            // getDiscardPile()-getDiscardTopCard();
+            var tempCard = discardPile.getLast();
+            discardPile.remove(tempCard);
+            drawPile.addAll(discardPile);
+            discardPile.clear();
+            discardPile.add(tempCard);
+            Collections.shuffle(drawPile);
+
+        }
+        var firstCard = drawPile.getLast();
+        drawPile.remove(firstCard);
+        return firstCard;
+        // determine if floating card is playable or keep in player hand
     }
 
-    public List<Card> getDrawPile() {
+    public LinkedList<Card> getDrawPile() {
         return drawPile;
     }
-    public List<Card> getDiscardPile(){
+    public LinkedList<Card> getDiscardPile(){
         return discardPile;
     }
 
     public Card getDiscardTopCard(){
-        return discardPile.get(this.discardPile.size()-1);
+        return discardPile.getLast();
     }
 }
